--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,6 @@
   <link href="favicon.ico" rel="icon" type="image/x-icon">
 </head>
 <body>
-<app-root></app-root>
+<aef-root></aef-root>
 </body>
 </html>
