--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
   <title>Aether Fintech Frontend</title>
   <base href="/">
   <meta content="width=device-width, initial-scale=1" name="viewport">
-  <link href="favicon.ico" rel="icon" type="image/x-icon">
+  <link href="images/AEF_favicon.png" rel="icon" type="image/x-icon">
 </head>
 <body>
 <aef-root></aef-root>
